--- a/Date picker widget Jquery UI/css/styles.css
+++ b/Date picker widget Jquery UI/css/styles.css
@@ -5,9 +5,9 @@ div{
    margin: 10px;
  
 }
-.mydiv img{
-   width: 20px;
-   height: 20px;
+#mydiv{
+  border: 2px solid black ;
+  padding: 20px;
 }
 
 .newdivclass{
